Bug 246801 - feedproxy.google.com does not work [AdBlock Issue]
Summary: feedproxy.google.com does not work [AdBlock Issue]
Status: RESOLVED FIXED
Alias: None
Product: rekonq
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: 0.5.0
Platform: openSUSE Linux
: NOR normal
Target Milestone: 0.9
Assignee: Andrea Diamantini
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-08-05 13:56 UTC by Stas
Modified: 2012-02-10 08:55 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Stas 2010-08-05 13:56:55 UTC
Version:           0.5.0 (using KDE 4.4.4) 
OS:                Linux

When pasting links with feedproxy.google.com - it stops loading in few seconds and nothing shown.

Reproducible: Always

Steps to Reproduce:
1. Open new tab.
2. Paste a link like this one: http://feedproxy.google.com/~r/cl_news/~3/5esEkWi3mDo/story01.htm into address bar.
3. Press enter.

Actual Results:  
It loads for a second and then stops, showing the same "new tab" page.

Expected Results:  
It should use some "smart" redirect to actual page http://hard.compulenta.ru/552530/

OS: Linux (x86_64) release 2.6.34-12-default
Compiler: gcc
Comment 1 markuss 2010-08-23 22:06:44 UTC
Confirming. Link works with Arora but not Rekonq.
Comment 2 Andrea Diamantini 2010-09-09 17:11:31 UTC
Adblock issue?
Comment 3 Panagiotis Papadopoulos 2010-09-11 02:37:55 UTC
seems like an adblock issue: Disabling adblock makes the URL above load fine…
This probably is related to https://bugs.kde.org/show_bug.cgi?id=249701 (but it does not seem like a dupe)
Comment 4 Francesco Cepparo 2010-11-13 22:02:30 UTC
I have a similar problem with rss.feedsportal.com URLs.

With Adblock disabled the following URL loads fine, otherwise a blank page is displayed and the redirection to the real website isn't done.

http://rss.feedsportal.com/c/32604/f/493129/s/f9a295b/l/0L0Stomshw0Bit0Ccont0Cnews0Cintel0Ee0Envidia0Eaccordo0Eda0E10Emiliardo0Eper0Ei0Echipset0C280A540C10Bhtml/story01.htm
Comment 5 Andrea Diamantini 2011-02-13 23:46:42 UTC
The FeedProxy link seems working fine now. But not the link reported in #4. Can you guys please test it again with 0.6.80 and let us know?
Comment 6 Francesco Cepparo 2011-02-14 02:57:20 UTC
Still doesn't work for me with Rekonq 0.6.80 + KDE 4.6.0. None of the two links work.
Comment 7 Andrea Diamantini 2012-02-10 08:55:38 UTC
Git commit 1dd5716bd9a9d68b2a13c1bd0c03617261743412 by Andrea Diamantini.
Committed on 10/02/2012 at 09:58.
Pushed by adjam into branch 'master'.

Consider option && ~option as null rules when option is not implemented

M  +1    -1    src/adblock/adblockmanager.cpp
M  +1    -1    src/adblock/adblockmanager.h
M  +1    -1    src/adblock/adblockrule.cpp
M  +1    -1    src/adblock/adblockrule.h
M  +1    -0    src/adblock/adblockrulefallbackimpl.cpp
M  +1    -0    src/adblock/adblockrulefallbackimpl.h
M  +20   -16   src/adblock/adblockrulenullimpl.cpp
M  +1    -1    src/adblock/adblockrulenullimpl.h

http://commits.kde.org/rekonq/1dd5716bd9a9d68b2a13c1bd0c03617261743412