Consider option && ~option as null rules when option is not implemented

BUG: 246801